--- a/index.html
+++ b/index.html
@@ -62,64 +62,64 @@
         const image_base_url = "https://raw.githubusercontent.com/hctsai1006/taiwan-dementia-quiz-game/main/images/";
         const slides = [
             // 第一組題目：紅色
-            { topic: "這個物品是紅色的嗎？", item: "草莓", isCorrect: true, image: image_base_url + "strawberry.png" },
-            { topic: "這個物品是紅色的嗎？", item: "香蕉", isCorrect: false, image: image_base_url + "banana.png" },
-            { topic: "這個物品是紅色的嗎？", item: "番茄", isCorrect: true, image: image_base_url + "tomato.png" },
-            { topic: "這個物品是紅色的嗎？", item: "高麗菜", isCorrect: false, image: image_base_url + "cabbage.png" },
-            { topic: "這個物品是紅色的嗎？", item: "消防車", isCorrect: true, image: image_base_url + "fire_truck.png" },
-            { topic: "這個物品是紅色的嗎？", item: "蘿蔔糕", isCorrect: false, image: image_base_url + "turnip_cake.png" },
-            { topic: "這個物品是紅色的嗎？", item: "綠豆湯", isCorrect: false, image: image_base_url + "mung_bean_soup.png" },
-            { topic: "這個物品是紅色的嗎？", item: "紅包", isCorrect: true, image: image_base_url + "red_envelope.png" },
-            { topic: "這個物品是紅色的嗎？", item: "紅燈", isCorrect: true, image: image_base_url + "red_light.png" },
-            { topic: "這個物品是紅色的嗎？", item: "菠菜", isCorrect: false, image: image_base_url + "spinach.png" },
+            { topic: "這個物品是紅色的嗎？", item: "草莓", isCorrect: true, image: "images/草莓.png" },
+            { topic: "這個物品是紅色的嗎？", item: "香蕉", isCorrect: false, image: "images/香蕉.png" },
+            { topic: "這個物品是紅色的嗎？", item: "番茄", isCorrect: true, image: "images/番茄.png" },
+            { topic: "這個物品是紅色的嗎？", item: "高麗菜", isCorrect: false, image: "images/高麗菜.png" },
+            { topic: "這個物品是紅色的嗎？", item: "消防車", isCorrect: true, image: "images/消防車.png" },
+            { topic: "這個物品是紅色的嗎？", item: "蘿蔔糕", isCorrect: false, image: "images/蘿蔔糕.png" },
+            { topic: "這個物品是紅色的嗎？", item: "綠豆湯", isCorrect: false, image: "images/綠豆湯.png" },
+            { topic: "這個物品是紅色的嗎？", item: "紅包", isCorrect: true, image: "images/紅包.png" },
+            { topic: "這個物品是紅色的嗎？", item: "紅燈", isCorrect: true, image: "images/紅燈.png" },
+            { topic: "這個物品是紅色的嗎？", item: "菠菜", isCorrect: false, image: "images/波菜.png" },
             
             // 第二組題目：交通工具
-            { topic: "這是交通工具嗎？", item: "火車", isCorrect: true, image: image_base_url + "train.png" },
-            { topic: "這是交通工具嗎？", item: "火爐", isCorrect: false, image: image_base_url + "stove.png" },
-            { topic: "這是交通工具嗎？", item: "公車", isCorrect: true, image: image_base_url + "bus.png" },
-            { topic: "這是交通工具嗎？", item: "公園", isCorrect: false, image: image_base_url + "park.png" },
-            { topic: "這是交通工具嗎？", item: "椅子", isCorrect: false, image: image_base_url + "chair.png" },
-            { topic: "這是交通工具嗎？", item: "飛機", isCorrect: true, image: image_base_url + "airplane.png" },
-            { topic: "這是交通工具嗎？", item: "熱氣球", isCorrect: false, image: image_base_url + "hot_air_balloon.png" },
-            { topic: "這是交通工具嗎？", item: "捷運", isCorrect: true, image: image_base_url + "mrt.png" },
-            { topic: "這是交通工具嗎？", item: "計程車", isCorrect: true, image: image_base_url + "taxi.png" },
-            { topic: "這是交通工具嗎？", item: "吹風機", isCorrect: false, image: image_base_url + "hair_dryer.png" },
+            { topic: "這是交通工具嗎？", item: "火車", isCorrect: true, image: "images/火車.png" },
+            { topic: "這是交通工具嗎？", item: "瓦斯爐", isCorrect: false, image: "images/瓦斯爐.png" },
+            { topic: "這是交通工具嗎？", item: "公車", isCorrect: true, image: "images/公車.png" },
+            { topic: "這是交通工具嗎？", item: "公園", isCorrect: false, image: "images/公園.png" },
+            { topic: "這是交通工具嗎？", item: "椅子", isCorrect: false, image: "images/椅子.png" },
+            { topic: "這是交通工具嗎？", item: "飛機", isCorrect: true, image: "images/飛機.png" },
+            { topic: "這是交通工具嗎？", item: "熱氣球", isCorrect: false, image: "images/熱氣球.png" },
+            { topic: "這是交通工具嗎？", item: "捷運", isCorrect: true, image: "images/捷運.png" },
+            { topic: "這是交通工具嗎？", item: "計程車", isCorrect: true, image: "images/計程車.png" },
+            { topic: "這是交通工具嗎？", item: "吹風機", isCorrect: false, image: "images/吹風機.png" },
 
             // 第三組題目：可以吃的
-            { topic: "這個東西可以吃嗎？", item: "饅頭", isCorrect: true, image: image_base_url + "steamed_bun.png" },
-            { topic: "這個東西可以吃嗎？", item: "肥皂", isCorrect: false, image: image_base_url + "soap.png" },
-            { topic: "這個東西可以吃嗎？", item: "蘋果", isCorrect: true, image: image_base_url + "apple.png" },
-            { topic: "這個東西可以吃嗎？", item: "牙刷", isCorrect: false, image: image_base_url + "toothbrush.png" },
-            { topic: "這個東西可以吃嗎？", item: "滷肉飯", isCorrect: true, image: image_base_url + "braised_pork_rice.png" },
-            { topic: "這個東西可以吃嗎？", item: "碗", isCorrect: false, image: image_base_url + "bowl.png" },
-            { topic: "這個東西可以吃嗎？", item: "粽子", isCorrect: true, image: image_base_url + "zongzi.png" },
-            { topic: "這個東西可以吃嗎？", item: "雞毛撢子", isCorrect: false, image: image_base_url + "feather_duster.png" },
-            { topic: "這個東西可以吃嗎？", item: "綠豆湯", isCorrect: true, image: image_base_url + "mung_bean_soup.png" },
-            { topic: "這個東西可以吃嗎？", item: "拖鞋", isCorrect: false, image: image_base_url + "slippers.png" },
+            { topic: "這個東西可以吃嗎？", item: "蘋果", isCorrect: true, image: "images/蘋果.png" },
+            { topic: "這個東西可以吃嗎？", item: "肥皂", isCorrect: false, image: "images/肥皂.png" },
+            { topic: "這個東西可以吃嗎？", item: "蘋果", isCorrect: true, image: "images/蘋果.png" },
+            { topic: "這個東西可以吃嗎？", item: "牙刷", isCorrect: false, image: "images/牙刷.png" },
+            { topic: "這個東西可以吃嗎？", item: "粽子", isCorrect: true, image: "images/粽子.png" },
+            { topic: "這個東西可以吃嗎？", item: "碗", isCorrect: false, image: "images/碗.png" },
+            { topic: "這個東西可以吃嗎？", item: "粽子", isCorrect: true, image: "images/粽子.png" },
+            { topic: "這個東西可以吃嗎？", item: "雞毛撢子", isCorrect: false, image: "images/雞毛撢子.png" },
+            { topic: "這個東西可以吃嗎？", item: "綠豆湯", isCorrect: true, image: "images/綠豆湯.png" },
+            { topic: "這個東西可以吃嗎？", item: "藍白拖", isCorrect: false, image: "images/藍白拖.jpg" },
             
             // 第四組題目：廚房用品
-            { topic: "這是廚房用品嗎？", item: "鍋子", isCorrect: true, image: image_base_url + "pot.png" },
-            { topic: "這是廚房用品嗎？", item: "電視", isCorrect: false, image: image_base_url + "tv.png" },
-            { topic: "這是廚房用品嗎？", item: "電鍋", isCorrect: true, image: image_base_url + "rice_cooker.png" },
-            { topic: "這是廚房用品嗎？", item: "鍋鏟", isCorrect: true, image: image_base_url + "spatula.png" },
-            { topic: "這是廚房用品嗎？", item: "烘碗機", isCorrect: true, image: image_base_url + "dish_dryer.png" },
-            { topic: "這是廚房用品嗎？", item: "除濕機", isCorrect: false, image: image_base_url + "dehumidifier.png" },
-            { topic: "這是廚房用品嗎？", item: "菜刀", isCorrect: true, image: image_base_url + "kitchen_knife.png" },
-            { topic: "這是廚房用品嗎？", item: "衣架", isCorrect: false, image: image_base_url + "hanger.png" },
-            { topic: "這是廚房用品嗎？", item: "電風扇", isCorrect: false, image: image_base_url + "fan.png" },
-            { topic: "這是廚房用品嗎？", item: "瓦斯爐", isCorrect: true, image: image_base_url + "gas_stove.png" },
+            { topic: "這是廚房用品嗎？", item: "鍋子", isCorrect: true, image: "images/鍋子.png" },
+            { topic: "這是廚房用品嗎？", item: "電視", isCorrect: false, image: "images/電視.png" },
+            { topic: "這是廚房用品嗎？", item: "電鍋", isCorrect: true, image: "images/電鍋.png" },
+            { topic: "這是廚房用品嗎？", item: "鍋子", isCorrect: true, image: "images/鍋子.png" },
+            { topic: "這是廚房用品嗎？", item: "烘碗機", isCorrect: true, image: "images/烘碗機.png" },
+            { topic: "這是廚房用品嗎？", item: "除濕機", isCorrect: false, image: "images/除濕機.png" },
+            { topic: "這是廚房用品嗎？", item: "菜刀", isCorrect: true, image: "images/菜刀.png" },
+            { topic: "這是廚房用品嗎？", item: "電風扇", isCorrect: false, image: "images/電風扇.png" },
+            { topic: "這是廚房用品嗎？", item: "電風扇", isCorrect: false, image: "images/電風扇.png" },
+            { topic: "這是廚房用品嗎？", item: "瓦斯爐", isCorrect: true, image: "images/瓦斯爐.png" },
 
             // 第五組題目：真的花
-            { topic: "這是真的花嗎？", item: "向日葵", isCorrect: true, image: image_base_url + "sunflower.png" },
-            { topic: "這是真的花嗎？", item: "屁股開花", isCorrect: false, image: image_base_url + "fall_down.png" },
-            { topic: "這是真的花嗎？", item: "玫瑰花", isCorrect: true, image: image_base_url + "rose.png" },
-            { topic: "這是真的花嗎？", item: "牽牛花", isCorrect: true, image: image_base_url + "morning_glory.png" },
-            { topic: "這是真的花嗎？", item: "百合花", isCorrect: true, image: image_base_url + "lily.png" },
-            { topic: "這是真的花嗎？", item: "有錢花", isCorrect: false, image: image_base_url + "spending_money.png" },
-            { topic: "這是真的花嗎？", item: "鬱金香", isCorrect: true, image: image_base_url + "tulip.png" },
-            { topic: "這是真的花嗎？", item: "老花", isCorrect: false, image: image_base_url + "presbyopia_glasses.png" },
-            { topic: "這是真的花嗎？", item: "五月花", isCorrect: false, image: image_base_url + "tissue.png" },
-            { topic: "這是真的花嗎？", item: "繡球花", isCorrect: true, image: image_base_url + "hydrangea.png" },
+            { topic: "這是真的花嗎？", item: "向日葵", isCorrect: true, image: "images/向日葵.png" },
+            { topic: "這是真的花嗎？", item: "有錢花", isCorrect: false, image: "images/有錢花.png" },
+            { topic: "這是真的花嗎？", item: "玫瑰花", isCorrect: true, image: "images/玫瑰花.png" },
+            { topic: "這是真的花嗎？", item: "牽牛花", isCorrect: true, image: "images/牽牛花.png" },
+            { topic: "這是真的花嗎？", item: "百合花", isCorrect: true, image: "images/百合花.png" },
+            { topic: "這是真的花嗎？", item: "有錢花", isCorrect: false, image: "images/有錢花.png" },
+            { topic: "這是真的花嗎？", item: "鬱金香", isCorrect: true, image: "images/鬱金香.png" },
+            { topic: "這是真的花嗎？", item: "老花", isCorrect: false, image: "images/老花.png" },
+            { topic: "這是真的花嗎？", item: "五月花", isCorrect: false, image: "images/五月花.jpg" },
+            { topic: "這是真的花嗎？", item: "繡球花", isCorrect: true, image: "images/繡球花.png" },
         ];
 
         // 步驟 2: 獲取需要操作的 HTML 元素
