--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             { topic: "這是交通工具嗎？", item: "公園", isCorrect: false, image: "images/公園.png" },
             { topic: "這是交通工具嗎？", item: "椅子", isCorrect: false, image: "images/椅子.png" },
             { topic: "這是交通工具嗎？", item: "飛機", isCorrect: true, image: "images/飛機.png" },
-            { topic: "這是交通工具嗎？", item: "熱氣球", isCorrect: false, image: "images/熱氣球.png" },
+            { topic: "這是交通工具嗎？", item: "雲霄飛車", isCorrect: false, image: "images/雲霄飛車.png" },
             { topic: "這是交通工具嗎？", item: "捷運", isCorrect: true, image: "images/捷運.png" },
             { topic: "這是交通工具嗎？", item: "計程車", isCorrect: true, image: "images/計程車.png" },
             { topic: "這是交通工具嗎？", item: "吹風機", isCorrect: false, image: "images/吹風機.png" },
@@ -94,6 +94,7 @@
             { topic: "這個東西可以吃嗎？", item: "碗", isCorrect: false, image: "images/碗.png" },
             { topic: "這個東西可以吃嗎？", item: "粽子", isCorrect: true, image: "images/粽子.png" },
             { topic: "這個東西可以吃嗎？", item: "雞毛撢子", isCorrect: false, image: "images/雞毛撢子.png" },
+            { topic: "這個東西可以吃嗎？", item: "包子", isCorrect: true, image: "images/包子.png" },
             { topic: "這個東西可以吃嗎？", item: "綠豆湯", isCorrect: true, image: "images/綠豆湯.png" },
             { topic: "這個東西可以吃嗎？", item: "藍白拖", isCorrect: false, image: "images/藍白拖.jpg" },
             
@@ -114,6 +115,7 @@
             { topic: "這是真的花嗎？", item: "有錢花", isCorrect: false, image: "images/有錢花.png" },
             { topic: "這是真的花嗎？", item: "玫瑰花", isCorrect: true, image: "images/玫瑰花.png" },
             { topic: "這是真的花嗎？", item: "牽牛花", isCorrect: true, image: "images/牽牛花.png" },
+            { topic: "這是真的花嗎？", item: "屁股開花", isCorrect: false, image: "images/屁股開花.png" },
             { topic: "這是真的花嗎？", item: "百合花", isCorrect: true, image: "images/百合花.png" },
             { topic: "這是真的花嗎？", item: "有錢花", isCorrect: false, image: "images/有錢花.png" },
             { topic: "這是真的花嗎？", item: "鬱金香", isCorrect: true, image: "images/鬱金香.png" },
