--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             { topic: "這是動物嗎？", item: "小狗", isCorrect: true, image: image_base_url + "小狗.png" },
             { topic: "這是動物嗎？", item: "高速公路", isCorrect: false, image: image_base_url + "高速公路.png" },
             { topic: "這是動物嗎？", item: "斑馬線", isCorrect: false, image: image_base_url + "斑馬線.png" },
-            { topic: "這是動物嗎？", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.png" },
+            { topic: "這是動物嗎？", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.jpg" },
             { topic: "這是動物嗎？", item: "密封包裝", isCorrect: false, image: image_base_url + "密封包裝.png" },
-            { topic: "這是動物嗎？", item: "釣魚", isCorrect: false, image: image_base_url + "釣魚.png" },
+            { topic: "這是動物嗎？", item: "釣魚", isCorrect: false, image: image_base_url + "釣魚.jpg" },
         ];
          const dingwan_set2 = [
             { topic: "這是運動嗎？", item: "游泳", isCorrect: true, image: image_base_url + "游泳.png" },
