--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
         // 定萬的題目
         const dingwan_set1 = [
             { topic: "這是動物嗎？", item: "長頸鹿", isCorrect: true, image: image_base_url + "長頸鹿.png" },
-            { topic: "這是動物嗎？", item: "蜜蜂", isCorrect: true, image: image_base_url + "蜜蜂.png" },
+            { topic: "這是動物嗎？", item: "蜜蜂", isCorrect: true, image: image_base_url + "蜜蜂.jpg" },
             { topic: "這是動物嗎？", item: "斑馬", isCorrect: true, image: image_base_url + "斑馬.png" },
             { topic: "這是動物嗎？", item: "企鵝", isCorrect: true, image: image_base_url + "企鵝.png" },
             { topic: "這是動物嗎？", item: "小狗", isCorrect: true, image: image_base_url + "小狗.png" },
             { topic: "這是動物嗎？", item: "高速公路", isCorrect: false, image: image_base_url + "高速公路.png" },
             { topic: "這是動物嗎？", item: "斑馬線", isCorrect: false, image: image_base_url + "斑馬線.png" },
-            { topic: "這是動物嗎？", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.jpg" },
+            { topic: "這是動物嗎？", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.png" },
             { topic: "這是動物嗎？", item: "密封包裝", isCorrect: false, image: image_base_url + "密封包裝.png" },
             { topic: "這是動物嗎？", item: "釣魚", isCorrect: false, image: image_base_url + "釣魚.jpg" },
         ];
