--- a/index.html
+++ b/index.html
@@ -145,103 +145,103 @@
         // 步驟 1: 結構化所有人的題目 (已更新題目引導語)
         // 宣妤的題目
         const xuanyu_set1 = [
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "草莓", isCorrect: true, image: image_base_url + "草莓.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "香蕉", isCorrect: false, image: image_base_url + "香蕉.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "番茄", isCorrect: true, image: image_base_url + "番茄.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "高麗菜", isCorrect: false, image: image_base_url + "高麗菜.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "消防車", isCorrect: true, image: image_base_url + "消防車.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "蘿蔔糕", isCorrect: false, image: image_base_url + "蘿蔔糕.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "綠豆湯", isCorrect: false, image: image_base_url + "綠豆湯.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "紅包", isCorrect: true, image: image_base_url + "紅包.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "紅燈", isCorrect: true, image: image_base_url + "紅燈.png" },
-            { topic: "以下何者是紅色的？是紅色的站圈，不是紅色的站叉", item: "菠菜", isCorrect: false, image: image_base_url + "波菜.png" },
+            { topic: "以下何者是紅色的？", item: "草莓", isCorrect: true, image: image_base_url + "草莓.png" },
+            { topic: "以下何者是紅色的？", item: "香蕉", isCorrect: false, image: image_base_url + "香蕉.png" },
+            { topic: "以下何者是紅色的？", item: "番茄", isCorrect: true, image: image_base_url + "番茄.png" },
+            { topic: "以下何者是紅色的？", item: "高麗菜", isCorrect: false, image: image_base_url + "高麗菜.png" },
+            { topic: "以下何者是紅色的？", item: "消防車", isCorrect: true, image: image_base_url + "消防車.png" },
+            { topic: "以下何者是紅色的？", item: "蘿蔔糕", isCorrect: false, image: image_base_url + "蘿蔔糕.png" },
+            { topic: "以下何者是紅色的？", item: "綠豆湯", isCorrect: false, image: image_base_url + "綠豆湯.png" },
+            { topic: "以下何者是紅色的？", item: "紅包", isCorrect: true, image: image_base_url + "紅包.png" },
+            { topic: "以下何者是紅色的？", item: "紅燈", isCorrect: true, image: image_base_url + "紅燈.png" },
+            { topic: "以下何者是紅色的？", item: "菠菜", isCorrect: false, image: image_base_url + "波菜.png" },
         ];
         const xuanyu_set2 = [
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "火車", isCorrect: true, image: image_base_url + "火車.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "火爐", isCorrect: false, image: image_base_url + "火爐.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "公車", isCorrect: true, image: image_base_url + "公車.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "公園", isCorrect: false, image: image_base_url + "公園.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "椅子", isCorrect: false, image: image_base_url + "椅子.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "飛機", isCorrect: true, image: image_base_url + "飛機.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "雲霄飛車", isCorrect: false, image: image_base_url + "雲霄飛車.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "捷運", isCorrect: true, image: image_base_url + "捷運.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "計程車", isCorrect: true, image: image_base_url + "計程車.png" },
-            { topic: "以下哪個是交通工具？是交通工具的站圈，不是的站叉", item: "吹風機", isCorrect: false, image: image_base_url + "吹風機.png" },
+            { topic: "以下哪個是交通工具？", item: "火車", isCorrect: true, image: image_base_url + "火車.png" },
+            { topic: "以下哪個是交通工具？", item: "火爐", isCorrect: false, image: image_base_url + "火爐.png" },
+            { topic: "以下哪個是交通工具？", item: "公車", isCorrect: true, image: image_base_url + "公車.png" },
+            { topic: "以下哪個是交通工具？", item: "公園", isCorrect: false, image: image_base_url + "公園.png" },
+            { topic: "以下哪個是交通工具？", item: "椅子", isCorrect: false, image: image_base_url + "椅子.png" },
+            { topic: "以下哪個是交通工具？", item: "飛機", isCorrect: true, image: image_base_url + "飛機.png" },
+            { topic: "以下哪個是交通工具？", item: "雲霄飛車", isCorrect: false, image: image_base_url + "雲霄飛車.png" },
+            { topic: "以下哪個是交通工具？", item: "捷運", isCorrect: true, image: image_base_url + "捷運.png" },
+            { topic: "以下哪個是交通工具？", item: "計程車", isCorrect: true, image: image_base_url + "計程車.png" },
+            { topic: "以下哪個是交通工具？", item: "吹風機", isCorrect: false, image: image_base_url + "吹風機.png" },
         ];
         // 秀吉的題目
         const xiuji_set1 = [
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "麻雀", isCorrect: true, image: image_base_url + "麻雀.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "貓咪", isCorrect: false, image: image_base_url + "貓咪.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "蝴蝶", isCorrect: true, image: image_base_url + "蝴蝶.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "狗狗", isCorrect: false, image: image_base_url + "小狗.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "老鷹", isCorrect: true, image: image_base_url + "老鷹.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "金魚", isCorrect: false, image: image_base_url + "金魚.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "蚊子", isCorrect: true, image: image_base_url + "蚊子.jpg" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "豬", isCorrect: false, image: image_base_url + "豬.jpg" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "鴿子", isCorrect: true, image: image_base_url + "鴿子.png" },
-            { topic: "以下這個動物，會飛的請到Ｏ（圈圈），不會飛的請到Ｘ（叉叉）。", item: "烏龜", isCorrect: false, image: image_base_url + "烏龜.jpg" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "麻雀", isCorrect: true, image: image_base_url + "麻雀.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "貓咪", isCorrect: false, image: image_base_url + "貓咪.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "蝴蝶", isCorrect: true, image: image_base_url + "蝴蝶.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "狗狗", isCorrect: false, image: image_base_url + "小狗.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "老鷹", isCorrect: true, image: image_base_url + "老鷹.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "金魚", isCorrect: false, image: image_base_url + "金魚.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "蚊子", isCorrect: true, image: image_base_url + "蚊子.jpg" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "豬", isCorrect: false, image: image_base_url + "豬.jpg" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "鴿子", isCorrect: true, image: image_base_url + "鴿子.png" },
+            { topic: "以下這個動物，會飛的請到Ｏ，不會飛的請到Ｘ", item: "烏龜", isCorrect: false, image: image_base_url + "烏龜.jpg" },
         ];
         const xiuji_set2 = [
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "饅頭", isCorrect: true, image: image_base_url + "包子.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "肥皂", isCorrect: false, image: image_base_url + "肥皂.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "蘋果", isCorrect: true, image: image_base_url + "蘋果.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "牙刷", isCorrect: false, image: image_base_url + "牙刷.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "滷肉飯", isCorrect: true, image: image_base_url + "滷肉飯.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "碗", isCorrect: false, image: image_base_url + "碗.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "粽子", isCorrect: true, image: image_base_url + "粽子.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "雞毛撢子", isCorrect: false, image: image_base_url + "雞毛撢子.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "綠豆湯", isCorrect: true, image: image_base_url + "綠豆湯.png" },
-            { topic: "以下這個東西，可以吃的請到Ｏ（圈圈），不可以吃的請到Ｘ（叉叉）。", item: "拖鞋", isCorrect: false, image: image_base_url + "藍白拖.jpg" },
+            { topic: "這個東西可以吃嗎？", item: "饅頭", isCorrect: true, image: image_base_url + "包子.png" },
+            { topic: "這個東西可以吃嗎？", item: "肥皂", isCorrect: false, image: image_base_url + "肥皂.png" },
+            { topic: "這個東西可以吃嗎？", item: "蘋果", isCorrect: true, image: image_base_url + "蘋果.png" },
+            { topic: "這個東西可以吃嗎？", item: "牙刷", isCorrect: false, image: image_base_url + "牙刷.png" },
+            { topic: "這個東西可以吃嗎？", item: "滷肉飯", isCorrect: true, image: image_base_url + "滷肉飯.png" },
+            { topic: "這個東西可以吃嗎？", item: "碗", isCorrect: false, image: image_base_url + "碗.png" },
+            { topic: "這個東西可以吃嗎？", item: "粽子", isCorrect: true, image: image_base_url + "粽子.png" },
+            { topic: "這個東西可以吃嗎？", item: "雞毛撢子", isCorrect: false, image: image_base_url + "雞毛撢子.png" },
+            { topic: "這個東西可以吃嗎？", item: "綠豆湯", isCorrect: true, image: image_base_url + "綠豆湯.png" },
+            { topic: "這個東西可以吃嗎？", item: "拖鞋", isCorrect: false, image: image_base_url + "藍白拖.jpg" },
         ];
         // 宜璇的題目
         const yixuan_set1 = [
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "鍋子", isCorrect: true, image: image_base_url + "鍋子.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "電視", isCorrect: false, image: image_base_url + "電視.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "電鍋", isCorrect: true, image: image_base_url + "電鍋.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "鍋鏟", isCorrect: true, image: image_base_url + "鍋鏟.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "烘碗機", isCorrect: true, image: image_base_url + "烘碗機.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "除濕機", isCorrect: false, image: image_base_url + "除濕機.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "菜刀", isCorrect: true, image: image_base_url + "菜刀.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "衣架", isCorrect: false, image: image_base_url + "衣架.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "電風扇", isCorrect: false, image: image_base_url + "電風扇.png" },
-            { topic: "以下何者是廚房用品？會在廚房看到的站圈，不會在廚房看到的站叉", item: "瓦斯爐", isCorrect: true, image: image_base_url + "瓦斯爐.png" },
+            { topic: "以下何者是廚房用品？", item: "鍋子", isCorrect: true, image: image_base_url + "鍋子.png" },
+            { topic: "以下何者是廚房用品？", item: "電視", isCorrect: false, image: image_base_url + "電視.png" },
+            { topic: "以下何者是廚房用品？", item: "電鍋", isCorrect: true, image: image_base_url + "電鍋.png" },
+            { topic: "以下何者是廚房用品？", item: "鍋鏟", isCorrect: true, image: image_base_url + "鍋鏟.png" },
+            { topic: "以下何者是廚房用品？", item: "烘碗機", isCorrect: true, image: image_base_url + "烘碗機.png" },
+            { topic: "以下何者是廚房用品？", item: "除濕機", isCorrect: false, image: image_base_url + "除濕機.png" },
+            { topic: "以下何者是廚房用品？", item: "菜刀", isCorrect: true, image: image_base_url + "菜刀.png" },
+            { topic: "以下何者是廚房用品？", item: "衣架", isCorrect: false, image: image_base_url + "衣架.png" },
+            { topic: "以下何者是廚房用品？", item: "電風扇", isCorrect: false, image: image_base_url + "電風扇.png" },
+            { topic: "以下何者是廚房用品？", item: "瓦斯爐", isCorrect: true, image: image_base_url + "瓦斯爐.png" },
         ];
         const yixuan_set2 = [
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "向日葵", isCorrect: true, image: image_base_url + "向日葵.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "屁股開花", isCorrect: false, image: image_base_url + "屁股開花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "玫瑰花", isCorrect: true, image: image_base_url + "玫瑰花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "牽牛花", isCorrect: true, image: image_base_url + "牽牛花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "百合花", isCorrect: true, image: image_base_url + "百合花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "有錢花", isCorrect: false, image: image_base_url + "有錢花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "鬱金香", isCorrect: true, image: image_base_url + "鬱金香.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "老花", isCorrect: false, image: image_base_url + "老花.png" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "五月花", isCorrect: false, image: image_base_url + "五月花.jpg" },
-            { topic: "以下何者是真的花？是真的花站圈，不是真的花站叉", item: "繡球花", isCorrect: true, image: image_base_url + "繡球花.png" },
+            { topic: "以下何者是真的花？", item: "向日葵", isCorrect: true, image: image_base_url + "向日葵.png" },
+            { topic: "以下何者是真的花？", item: "屁股開花", isCorrect: false, image: image_base_url + "屁股開花.png" },
+            { topic: "以下何者是真的花？", item: "玫瑰花", isCorrect: true, image: image_base_url + "玫瑰花.png" },
+            { topic: "以下何者是真的花？", item: "牽牛花", isCorrect: true, image: image_base_url + "牽牛花.png" },
+            { topic: "以下何者是真的花？", item: "百合花", isCorrect: true, image: image_base_url + "百合花.png" },
+            { topic: "以下何者是真的花？", item: "有錢花", isCorrect: false, image: image_base_url + "有錢花.png" },
+            { topic: "以下何者是真的花？", item: "鬱金香", isCorrect: true, image: image_base_url + "鬱金香.png" },
+            { topic: "以下何者是真的花？", item: "老花", isCorrect: false, image: image_base_url + "老花.png" },
+            { topic: "以下何者是真的花？", item: "五月花", isCorrect: false, image: image_base_url + "五月花.jpg" },
+            { topic: "以下何者是真的花？", item: "繡球花", isCorrect: true, image: image_base_url + "繡球花.png" },
         ];
         // 定萬的題目
         const dingwan_set1 = [
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "長頸鹿", isCorrect: true, image: image_base_url + "長頸鹿.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "蜜蜂", isCorrect: true, image: image_base_url + "蜜蜂.jpg" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "斑馬", isCorrect: true, image: image_base_url + "斑馬.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "企鵝", isCorrect: true, image: image_base_url + "企鵝.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "小狗", isCorrect: true, image: image_base_url + "小狗.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "高速公路", isCorrect: false, image: image_base_url + "高速公路.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "斑馬線", isCorrect: false, image: image_base_url + "斑馬線.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "密封包裝", isCorrect: false, image: image_base_url + "密封包裝.png" },
-            { topic: "請問下列何者是動物？是動物的站圈，不是的站叉。", item: "釣魚", isCorrect: false, image: image_base_url + "釣魚.jpg" },
+            { topic: "請問下列何者是動物？", item: "長頸鹿", isCorrect: true, image: image_base_url + "長頸鹿.png" },
+            { topic: "請問下列何者是動物？", item: "蜜蜂", isCorrect: true, image: image_base_url + "蜜蜂.jpg" },
+            { topic: "請問下列何者是動物？", item: "斑馬", isCorrect: true, image: image_base_url + "斑馬.png" },
+            { topic: "請問下列何者是動物？", item: "企鵝", isCorrect: true, image: image_base_url + "企鵝.png" },
+            { topic: "請問下列何者是動物？", item: "小狗", isCorrect: true, image: image_base_url + "小狗.png" },
+            { topic: "請問下列何者是動物？", item: "高速公路", isCorrect: false, image: image_base_url + "高速公路.png" },
+            { topic: "請問下列何者是動物？", item: "斑馬線", isCorrect: false, image: image_base_url + "斑馬線.png" },
+            { topic: "請問下列何者是動物？", item: "蜂蜜", isCorrect: false, image: image_base_url + "蜂蜜.png" },
+            { topic: "請問下列何者是動物？", item: "密封包裝", isCorrect: false, image: image_base_url + "密封包裝.png" },
+            { topic: "請問下列何者是動物？", item: "釣魚", isCorrect: false, image: image_base_url + "釣魚.jpg" },
         ];
          const dingwan_set2 = [
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "游泳", isCorrect: true, image: image_base_url + "游泳.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "跑步", isCorrect: true, image: image_base_url + "跑步.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "踢足球", isCorrect: true, image: image_base_url + "踢足球.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "瑜伽", isCorrect: true, image: image_base_url + "瑜珈.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "跳繩", isCorrect: true, image: image_base_url + "跳繩.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "睡覺", isCorrect: false, image: image_base_url + "睡覺.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "吃午餐", isCorrect: false, image: image_base_url + "吃午餐.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "公園", isCorrect: false, image: image_base_url + "公園.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "啞鈴", isCorrect: false, image: image_base_url + "啞鈴.png" },
-            { topic: "下列何者是運動？是運動的站圈，不是的站叉。", item: "聊天", isCorrect: false, image: image_base_url + "聊天.png" },
+            { topic: "下列何者是運動？", item: "游泳", isCorrect: true, image: image_base_url + "游泳.png" },
+            { topic: "下列何者是運動？", item: "跑步", isCorrect: true, image: image_base_url + "跑步.png" },
+            { topic: "下列何者是運動？", item: "踢足球", isCorrect: true, image: image_base_url + "踢足球.png" },
+            { topic: "下列何者是運動？", item: "瑜伽", isCorrect: true, image: image_base_url + "瑜珈.png" },
+            { topic: "下列何者是運動？", item: "跳繩", isCorrect: true, image: image_base_url + "跳繩.png" },
+            { topic: "下列何者是運動？", item: "睡覺", isCorrect: false, image: image_base_url + "睡覺.png" },
+            { topic: "下列何者是運動？", item: "吃午餐", isCorrect: false, image: image_base_url + "吃午餐.png" },
+            { topic: "下列何者是運動？", item: "公園", isCorrect: false, image: image_base_url + "公園.png" },
+            { topic: "下列何者是運動？", item: "啞鈴", isCorrect: false, image: image_base_url + "啞鈴.png" },
+            { topic: "下列何者是運動？", item: "聊天", isCorrect: false, image: image_base_url + "聊天.png" },
         ];
 
         // 步驟 2: 按照新的指定順序重新排列所有題目
